--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Omnifood Project</title>
+  <title>Forfood Project</title>
   <link rel="stylesheet" href="resources/css/style.css">
   <link rel="stylesheet" href="vendors/css/normalize.css">
   <link rel="stylesheet" href="vendors/css/grid.css">
@@ -13,9 +13,10 @@
 <body>
   <header>
    <div class="hero-text-box">
-     <h1>Goodbye junk food. Hello super healthy meals.</h1>
-     <a href="#">I’m hungry</a>
-     <a href="#">Show me more</a>
+     <h1>Goodbye junk food.<br> Hello super healthy meals.</h1>
+     <!--padaromi du mygtukai. vienas orange kitaip vaiduoklisko stiliaus -->
+     <a class="btn btn-full" href="#">I’m hungry</a>
+     <a class ="btn btn-ghost" href="#">Show me more</a>
 
    </div>
 
