--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -12,7 +12,20 @@
 
 <body>
   <header>
-   <div class="hero-text-box">
+    <nav>
+      <div class="row">
+        <img src="resources/img/logo-white.png" alt="logo" class="logo">
+        <ul class="main-nav">
+          <li> <a href="#">Food delivery</a></li>
+          <li> <a href="#">How it works</a></li>
+          <li> <a href="#">Our cities</a></li>
+          <li> <a href="#">Sign up! </a></li>
+        </ul>
+      </div>
+    </nav>
+   
+   
+    <div class="hero-text-box">
      <h1>Goodbye junk food.<br> Hello super healthy meals.</h1>
      <!--padaromi du mygtukai. vienas orange kitaip vaiduoklisko stiliaus -->
      <a class="btn btn-full" href="#">I’m hungry</a>
