Creating section 2 (meals)
added and formatted photos

--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -58,7 +58,7 @@
         <p>Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also
           choose to order more flexibly if that's your style.</p>
       </div>
-    
+
 
 
       <div class="col span-1-of-4 box">
@@ -86,6 +86,63 @@
       </div>
     </div>
 
+  </section>
+
+  <section class="section-meals">
+    <!-- nenaudojam row, kad sita sekcija turetu 100 puslapio plucio ( width)-->
+    <ul class="meals-showcase">
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
+        </figure>
+      </li>
+
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
+        </figure>
+      </li>
+
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/3.jpg" alt="Chicken breast steak with vegetables">
+        </figure>
+      </li>
+
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/4.jpg" alt="Autumn pumpkin soup">
+        </figure>
+      </li>
+    </ul>
+
+    <ul class="meals-showcase">
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables">
+        </figure>
+      </li>
+
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/6.jpg" alt="Healthy baguette with egg and vegetables">
+        </figure>
+      </li>
+
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/7.jpg" alt="Burger with cheddar and bacon">
+        </figure>
+      </li>
+
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/img/8.jpg" alt="Granola with cherries and strawberries">
+        </figure>
+      </li>
+    </ul>
+
+
 
   </section>
 
@@ -96,7 +153,6 @@
 
 
 <!--  
-
 
 
 -->
