--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -90,7 +90,7 @@
 
   <section class="section-meals">
     <!-- nenaudojam row, kad sita sekcija turetu 100 puslapio plucio ( width)-->
-    <ul class="meals-showcase">
+    <ul class="meals-showcase clearfix">
       <li>
         <figure class="meal-photo">
           <img src="resources/img/1.jpg" alt="Korean bibimbap with egg and vegetables">
@@ -116,7 +116,7 @@
       </li>
     </ul>
 
-    <ul class="meals-showcase">
+    <ul class="meals-showcase clearfix">
       <li>
         <figure class="meal-photo">
           <img src="resources/img/5.jpg" alt="Paleo beef steak with vegetables">
@@ -150,10 +150,10 @@
     </div>
 
     <div class="row">
-      <div class="col span-1-of-2">
+      <div class="col span-1-of-2 step-box">
         <img src="resources/img/app-iPhone.png" alt="Iphone app" class="app-screen">
       </div>
-      <div class="col span-1-of-2">
+      <div class="col span-1-of-2 step-box">
         <div class="work-step">
           <div> 1 </div>
           <p>Choose the subscription plan that best fits your needs and sign up today.</p>
