--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -168,8 +168,11 @@
           <div> 3 </div>
           <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
         </div>
+        <div class="stores">
         <a href="#" class = "btn-app"> <img src="resources/img/download-app.svg" alt="Apple store"></a>
         <a href="#" class = "btn-app"> <img src="resources/img/download-app-android.png" alt="Android store"></a>
+      </div>
+      </div>
       </div>
     </div>
 
