--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -202,7 +202,7 @@
 
         <div class="cities-feature">
           <i class="ion-social-twitter icon-small"></i>
-          <p>@omnifood_lx</p>
+          <a href="#"><p>@omnifood_lx</p></a>
         </div>
       </div>
       <div class="col span-1-of-4 box">
@@ -210,17 +210,17 @@
         <h3>San Francisco</h3>
         <div class="cities-feature">
           <i class="ion-ios-person icon-small"></i>
-          3700+ happy eaters
+          <p>3700+ happy eaters</p>
         </div>
 
         <div class="cities-feature">
           <i class="ion-ios-star icon-small"></i>
-          160+ top chefs
+          <p>160+ top chefs</p>
         </div>
 
         <div class="cities-feature">
           <i class="ion-social-twitter icon-small"></i>
-          @omnifood_sf
+          <a href="#"><p>@omnifood_sf</p></a>
         </div>
       </div>
 
@@ -229,17 +229,17 @@
         <h3>Berlin</h3>
         <div class="cities-feature">
           <i class="ion-ios-person icon-small"></i>
-          2300+ happy eaters
+          <p>2300+ happy eaters</p>
         </div>
 
         <div class="cities-feature">
           <i class="ion-ios-star icon-small"></i>
-          110+ top chefs
+          <p>110+ top chefs</p>
         </div>
 
         <div class="cities-feature">
           <i class="ion-social-twitter icon-small"></i>
-          @omnifood_berlin
+          <a href=""><p>@omnifood_berlin</p></a>
         </div>
       </div>
 
@@ -248,17 +248,17 @@
         <h3>London</h3>
         <div class="cities-feature">
           <i class="ion-ios-person icon-small"></i>
-          1200+ happy eaters
+          <p>1200+ happy eaters</p>
         </div>
 
         <div class="cities-feature">
           <i class="ion-ios-star icon-small"></i>
-          50+ top chefs
+          <p>50+ top chefs</p>
         </div>
 
         <div class="cities-feature">
           <i class="ion-social-twitter icon-small"></i>
-          @omnifood_london
+          <a href="#"><p>@omnifood_london</p></a>
         </div>
       </div>
     </div>
@@ -275,22 +275,5 @@
 <!--  
 
 
-
-
-
-San Francisco
-3700+ happy eaters
-160+ top chefs
-@omnifood_sf
-
-Berlin
-2300+ happy eaters
-110+ top chefs
-@omnifood_berlin
-
-London
-1200+ happy eaters
-50+ top chefs
-@omnifood_london
 
 -->
