--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -202,7 +202,9 @@
 
         <div class="cities-feature">
           <i class="ion-social-twitter icon-small"></i>
-          <a href="#"><p>@omnifood_lx</p></a>
+          <a href="#">
+            <p>@omnifood_lx</p>
+          </a>
         </div>
       </div>
       <div class="col span-1-of-4 box">
@@ -220,7 +222,9 @@
 
         <div class="cities-feature">
           <i class="ion-social-twitter icon-small"></i>
-          <a href="#"><p>@omnifood_sf</p></a>
+          <a href="#">
+            <p>@omnifood_sf</p>
+          </a>
         </div>
       </div>
 
@@ -239,7 +243,9 @@
 
         <div class="cities-feature">
           <i class="ion-social-twitter icon-small"></i>
-          <a href=""><p>@omnifood_berlin</p></a>
+          <a href="">
+            <p>@omnifood_berlin</p>
+          </a>
         </div>
       </div>
 
@@ -258,11 +264,46 @@
 
         <div class="cities-feature">
           <i class="ion-social-twitter icon-small"></i>
-          <a href="#"><p>@omnifood_london</p></a>
+          <a href="#">
+            <p>@omnifood_london</p>
+          </a>
         </div>
       </div>
     </div>
+  </section>
 
+  <section class="section-testimonials">
+    <div class="row">
+      <h2>Our customers can't live without us</h2>
+    </div>
+
+    <div class="row">
+      <div class="col span-1-of-3">
+        <i></i>
+        <blockquote>is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver.Now that I got used to it, I couldn't live without my daily meals! <br>
+          <cite><img src="resources/img/customer-1.jpg"> Alberto Duncan</cite>
+        </blockquote>
+      </div>
+
+
+      <div class="col span-1-of-3">
+        <i></i>
+        <blockquote> Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver.Now that I got used to it, I couldn't live without my daily meals!
+          <cite><img src="resources/img/customer-2.jpg">Joana Silva</cite>
+        </blockquote>
+      </div>
+
+
+      <div class="col span-1-of-3">
+        <i></i>
+        <blockquote> Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver.
+          Now that I got used to it, I couldn't live without my daily meals!
+          <cite>
+            <img src="resources/img/customer-3.jpg">Milton Chapman</cite>
+        </blockquote>
+
+      </div>
+    </div>
 
   </section>
 
@@ -275,5 +316,14 @@
 <!--  
 
 
+Title: Our customers can't live without us
 
+Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver. Now that I got used to it, I couldn't live without my daily meals!
+(Alberto Duncan)
+
+Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but no one comes even close to Omifood. Me and my family are so in love!
+(Joana Silva)
+
+I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood. Best food delivery service in the Bay Area. Keep up the great work!
+(Milton Chapman)
 -->
