contact form section

--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -316,7 +316,9 @@
         <div class="plan-box">
           <div>
             <h3>Premium</h3>
-            <p class="plan-price">399$ <span>/ month </span></p>
+            <p class="plan-price">399$
+              <span>/ month </span>
+            </p>
             <p class="plan-price-meal">That’s only 13.30$ per meal</p>
           </div>
           <div>
@@ -343,7 +345,9 @@
         <div class="plan-box">
           <div>
             <h3>Pro</h3>
-            <p class="plan-price">149$ <span>/ month </span></p>
+            <p class="plan-price">149$
+              <span>/ month </span>
+            </p>
             <p class="plan-price-meal">That’s only 14.90$ per meal</p>
           </div>
           <div>
@@ -369,7 +373,9 @@
         <div class="plan-box">
           <div>
             <h3>Starter</h3>
-            <p class="plan-price">19$ <span>/ meal </span></p>
+            <p class="plan-price">19$
+              <span>/ meal </span>
+            </p>
             <p class="plan-price-meal">&nbsp;</p>
           </div>
           <div>
@@ -378,10 +384,10 @@
                 <i class="icon ion-ios-checkmark icon-small"></i>1 meal
               </li>
               <li>
-                  <i class="icon ion-ios-checkmark icon-small"></i>Order from 8 am to 12 pm
+                <i class="icon ion-ios-checkmark icon-small"></i>Order from 8 am to 12 pm
               </li>
               <li>
-                  <i class="icon ion-ios-close icon-small"></i>
+                <i class="icon ion-ios-close icon-small"></i>
               </li>
 
               <li>
@@ -395,7 +401,71 @@
         </div>
       </div>
     </div>
+  </section>
 
+  <section class="section-form">
+    <div class="row">
+      <h2>We're happy to hear from you</h2>
+    </div>
+
+    <div class="row">
+      <form method="post" action="#" class="contact-form">
+
+        <div class="row">
+          <div class="col span-1-of-3">
+            <label for="name">Name</label>
+          </div>
+
+          <div class="col span-2-of-3">
+            <input type="text" name="name" id="name" placeholder="Your name" required>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col span-1-of-3">
+            <label for="email">Email</label>
+          </div>
+
+          <div class="col span-2-of-3">
+            <input type="email" name="email" id="email" placeholder="Your email" required>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col span-1-of-3">
+            <label for="name">How did You find us?</label>
+          </div>
+
+          <div class="col span-2-of-3">
+            <input name="find-us" id="find-us">
+            <option value="friends">Friends</option>
+            <option value="search">Search engine</option>
+            <option value="ad">Advertisment</option>
+            <option value="other">Other</option>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col span-1-of-3">
+            <label for="news">Newsletter</label>
+          </div>
+
+          <div class="col span-2-of-3">
+            <input type="checkbox" name="news" id="news" checked> Yes,please!
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col span-1-of-3">
+            <label> &nbsp;</label>
+          </div>
+
+          <div class="col span-2-of-3">
+            <input type="submit" value="Send it!">
+          </div>
+        </div>
+      </form>
+    </div>
   </section>
 
 
@@ -406,23 +476,14 @@
 
 <!--  
 
-1 meal every day
-Order 24/7
-Access to newest creations
-Free delivery
+Title: We're happy to hear from you
 
-Plan 2: Pro
-149$ per month
-That’s only 14.90$ per meal
-1 meal 10 days/month
-Order 24/7
-Access to newest creations
-Free delivery
+Fields to include:
+Name
+Email
+How did you find us?
+Newsletter
+Drop us a line
 
-Plan 3: Starter
-19$ per meal
-1 meal
-Order from 8 am to 12 pm
-Free delivery
 
 -->
