--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -437,11 +437,12 @@
           </div>
 
           <div class="col span-2-of-3">
-            <input name="find-us" id="find-us">
-            <option value="friends">Friends</option>
-            <option value="search">Search engine</option>
-            <option value="ad">Advertisment</option>
-            <option value="other">Other</option>
+            <select name="find-us" id="find-us">
+              <option value="friends">Friends</option>
+              <option value="search">Search engine</option>
+              <option value="ad">Advertisment</option>
+              <option value="other">Other</option>
+            </select>  
           </div>
         </div>
 
@@ -452,6 +453,16 @@
 
           <div class="col span-2-of-3">
             <input type="checkbox" name="news" id="news" checked> Yes,please!
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col span-1-of-3">
+            <label>Drop us a line</label>
+          </div>
+
+          <div class="col span-2-of-3">
+            <textarea name="msg" placeholder="Write us a letter"></textarea>
           </div>
         </div>
 
