--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="vendors/css/grid.css">
   <link rel="stylesheet" href="vendors/css/ionicons.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
+  <link href="https://unpkg.com/ionicons@4.0.0/dist/css/ionicons.min.css"rel="stylesheet"/>
+  
 </head>
 
 <body>
@@ -479,6 +481,31 @@
     </div>
   </section>
 
+  <footer>
+    <div class="row">
+      <div class="col span-1-of-2">
+        <ul class="footer-nav">
+          <li> <a href="#">About us</a></li>
+          <li> <a href="#">Blog</a></li>
+          <li> <a href="#">Press</a></li>
+          <li> <a href="#">iOS App</a></li>
+          <li> <a href="#">Android App</a></li>
+        </ul>
+      </div>
+      <div class="col span-1-of-2">
+        <ul class="social-links">
+          <li><i class="icon ion-logo-facebook"></i></li>
+          <li><i class="icon ion-logo-twitter"></i></li>
+          <li><i class="icon ion-logo-googleplus"></i></li>
+          <li><i class="icon ion-logo-instagram"></i></li>
+        </ul>
+      </div>
+
+      <div class="row">
+        <p>Copyright &copy; 2018 by Omnifood. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
 
 </body>
 
@@ -486,15 +513,6 @@
 
 
 <!--  
-
-Title: We're happy to hear from you
-
-Fields to include:
-Name
-Email
-How did you find us?
-Newsletter
-Drop us a line
 
 
 -->
