--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -494,10 +494,10 @@
       </div>
       <div class="col span-1-of-2">
         <ul class="social-links">
-          <li><i class="icon ion-logo-facebook"></i></li>
-          <li><i class="icon ion-logo-twitter"></i></li>
-          <li><i class="icon ion-logo-googleplus"></i></li>
-          <li><i class="icon ion-logo-instagram"></i></li>
+          <li><a href="#"><i class="icon ion-logo-facebook"></i></a></li>
+          <li><a href="#"><i class="icon ion-logo-twitter"></i></a></li>
+          <li><a href="#"><i class="icon ion-logo-googleplus"></i></a></li>
+          <li><a href="#"><i class="icon ion-logo-instagram"></i></a></li>
         </ul>
       </div>
 
