--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -414,7 +414,7 @@
       <form method="post" action="#" class="contact-form">
 
         <div class="row">
-          <div class="col span-1-of-3">
+          <div class="col span-1-of-3" id="form-name">
             <label for="name">Name</label>
           </div>
 
@@ -424,7 +424,7 @@
         </div>
 
         <div class="row">
-          <div class="col span-1-of-3">
+          <div class="col span-1-of-3 " id="form-name">
             <label for="email">Email</label>
           </div>
 
@@ -434,7 +434,7 @@
         </div>
 
         <div class="row">
-          <div class="col span-1-of-3">
+          <div class="col span-1-of-3" id="form-name">
             <label for="name">How did You find us?</label>
           </div>
 
@@ -449,7 +449,7 @@
         </div>
 
         <div class="row">
-          <div class="col span-1-of-3">
+          <div class="col span-1-of-3"  id="form-name" >
             <label for="news">Newsletter</label>
           </div>
 
@@ -459,7 +459,7 @@
         </div>
 
         <div class="row">
-          <div class="col span-1-of-3">
+          <div class="col span-1-of-3" id="form-name">
             <label>Drop us a line</label>
           </div>
 
@@ -469,7 +469,7 @@
         </div>
 
         <div class="row">
-          <div class="col span-1-of-3">
+          <div class="col span-1-of-3" id="form-name">
             <label> &nbsp;</label>
           </div>
 
