adding media queries

--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -2,15 +2,19 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8">
-  <title>Forfood Project</title>
+  <!-- name and content say for mob devs, that they should start from scale 1.0 and not zoom out-->
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <link rel="stylesheet" href="resources/css/style.css">
+  <link rel="stylesheet" href="resources/css/queries.css">
   <link rel="stylesheet" href="vendors/css/normalize.css">
   <link rel="stylesheet" href="vendors/css/grid.css">
   <link rel="stylesheet" href="vendors/css/ionicons.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
   <link href="https://unpkg.com/ionicons@4.0.0/dist/css/ionicons.min.css"rel="stylesheet"/>
   
+  <title>Forfood Project</title>
+
 </head>
 
 <body>
@@ -156,17 +160,17 @@
         <img src="resources/img/app-iPhone.png" alt="Iphone app" class="app-screen">
       </div>
       <div class="col span-1-of-2 step-box">
-        <div class="work-step">
+        <div class="work-step clearfix">
           <div> 1 </div>
           <p>Choose the subscription plan that best fits your needs and sign up today.</p>
         </div>
 
-        <div class="work-step">
+        <div class="work-step clearfix">
           <div> 2 </div>
           <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
         </div>
 
-        <div class="work-step">
+        <div class="work-step clearfix">
           <div> 3 </div>
           <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
         </div>
