--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -5,14 +5,13 @@
   <!-- name and content say for mob devs, that they should start from scale 1.0 and not zoom out-->
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <link rel="stylesheet" href="resources/css/style.css">
-  <link rel="stylesheet" href="resources/css/queries.css">
   <link rel="stylesheet" href="vendors/css/normalize.css">
   <link rel="stylesheet" href="vendors/css/grid.css">
   <link rel="stylesheet" href="vendors/css/ionicons.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
   <link href="https://unpkg.com/ionicons@4.0.0/dist/css/ionicons.min.css"rel="stylesheet"/>
-  
+  <link rel="stylesheet" href="resources/css/style.css">
+  <link rel="stylesheet" href="resources/css/queries.css">
   <title>Forfood Project</title>
 
 </head>
@@ -174,14 +173,14 @@
           <div> 3 </div>
           <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
         </div>
-        <div class="stores">
+       <!-- <div class="stores"> -->
           <a href="#" class="btn-app">
             <img src="resources/img/download-app.svg" alt="Apple store">
           </a>
           <a href="#" class="btn-app">
             <img src="resources/img/download-app-android.png" alt="Android store">
           </a>
-        </div>
+        <!--</div>-->
       </div>
     </div>
     </div>
@@ -198,18 +197,18 @@
         <h3>Lisbon</h3>
         <div class="cities-feature">
           <i class="ion-ios-person icon-small"></i>
-          <p>1600+ happy eaters</p>
+          1600+ happy eaters
         </div>
 
         <div class="cities-feature">
           <i class="ion-ios-star icon-small"></i>
-          <p>60+ top chefs</p>
+          60+ top chefs
         </div>
 
         <div class="cities-feature">
           <i class="ion-social-twitter icon-small"></i>
           <a href="#">
-            <p>@omnifood_lx</p>
+            @omnifood_lx
           </a>
         </div>
       </div>
@@ -218,18 +217,18 @@
         <h3>San Francisco</h3>
         <div class="cities-feature">
           <i class="ion-ios-person icon-small"></i>
-          <p>3700+ happy eaters</p>
+          3700+ happy eaters
         </div>
 
         <div class="cities-feature">
           <i class="ion-ios-star icon-small"></i>
-          <p>160+ top chefs</p>
+          160+ top chefs
         </div>
 
         <div class="cities-feature">
           <i class="ion-social-twitter icon-small"></i>
           <a href="#">
-            <p>@omnifood_sf</p>
+            @omnifood_sf
           </a>
         </div>
       </div>
@@ -239,18 +238,18 @@
         <h3>Berlin</h3>
         <div class="cities-feature">
           <i class="ion-ios-person icon-small"></i>
-          <p>2300+ happy eaters</p>
+          2300+ happy eaters
         </div>
 
         <div class="cities-feature">
           <i class="ion-ios-star icon-small"></i>
-          <p>110+ top chefs</p>
+          110+ top chefs
         </div>
 
         <div class="cities-feature">
           <i class="ion-social-twitter icon-small"></i>
-          <a href="">
-            <p>@omnifood_berlin</p>
+          <a href="#">
+            @omnifood_berlin
           </a>
         </div>
       </div>
@@ -260,18 +259,18 @@
         <h3>London</h3>
         <div class="cities-feature">
           <i class="ion-ios-person icon-small"></i>
-          <p>1200+ happy eaters</p>
+          1200+ happy eaters
         </div>
 
         <div class="cities-feature">
           <i class="ion-ios-star icon-small"></i>
-          <p>50+ top chefs</p>
+          50+ top chefs
         </div>
 
         <div class="cities-feature">
           <i class="ion-social-twitter icon-small"></i>
           <a href="#">
-            <p>@omnifood_london</p>
+            @omnifood_london
           </a>
         </div>
       </div>
