--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -4,12 +4,12 @@
 <head>
   <!-- name and content say for mob devs, that they should start from scale 1.0 and not zoom out-->
   <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
   <link rel="stylesheet" href="vendors/css/normalize.css">
   <link rel="stylesheet" href="vendors/css/grid.css">
   <link rel="stylesheet" href="vendors/css/ionicons.min.css">
   <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
-  <link href="https://unpkg.com/ionicons@4.0.0/dist/css/ionicons.min.css"rel="stylesheet"/>
+  <link href="https://unpkg.com/ionicons@4.0.0/dist/css/ionicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="resources/css/style.css">
   <link rel="stylesheet" href="resources/css/queries.css">
   <title>Forfood Project</title>
@@ -173,14 +173,14 @@
           <div> 3 </div>
           <p>Enjoy your meal after less than 20 minutes. See you the next time!</p>
         </div>
-       <!-- <div class="stores"> -->
+        <div class="stores">
           <a href="#" class="btn-app">
             <img src="resources/img/download-app.svg" alt="Apple store">
           </a>
           <a href="#" class="btn-app">
             <img src="resources/img/download-app-android.png" alt="Android store">
           </a>
-        <!--</div>-->
+        </div>
       </div>
     </div>
     </div>
@@ -447,12 +447,12 @@
               <option value="search">Search engine</option>
               <option value="ad">Advertisment</option>
               <option value="other">Other</option>
-            </select>  
+            </select>
           </div>
         </div>
 
         <div class="row">
-          <div class="col span-1-of-3"  id="form-name" >
+          <div class="col span-1-of-3" id="form-name">
             <label for="news">Newsletter</label>
           </div>
 
@@ -488,19 +488,45 @@
     <div class="row">
       <div class="col span-1-of-2">
         <ul class="footer-nav">
-          <li> <a href="#">About us</a></li>
-          <li> <a href="#">Blog</a></li>
-          <li> <a href="#">Press</a></li>
-          <li> <a href="#">iOS App</a></li>
-          <li> <a href="#">Android App</a></li>
+          <li>
+            <a href="#">About us</a>
+          </li>
+          <li>
+            <a href="#">Blog</a>
+          </li>
+          <li>
+            <a href="#">Press</a>
+          </li>
+          <li>
+            <a href="#">iOS App</a>
+          </li>
+          <li>
+            <a href="#">Android App</a>
+          </li>
         </ul>
       </div>
       <div class="col span-1-of-2">
         <ul class="social-links">
-          <li><a href="#"><i class="icon ion-logo-facebook"></i></a></li>
-          <li><a href="#"><i class="icon ion-logo-twitter"></i></a></li>
-          <li><a href="#"><i class="icon ion-logo-googleplus"></i></a></li>
-          <li><a href="#"><i class="icon ion-logo-instagram"></i></a></li>
+          <li>
+            <a href="#">
+              <i class="icon ion-logo-facebook"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="icon ion-logo-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="icon ion-logo-googleplus"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="icon ion-logo-instagram"></i>
+            </a>
+          </li>
         </ul>
       </div>
 
@@ -510,7 +536,18 @@
     </div>
   </footer>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
+  <!--for pseudo classes in explorer 6,7 and 5-->
+  <script src="https://cdn.jsdelivr.net/npm/selectivizr@1.0.3/selectivizr.min.js"></script>
+
+  <script src="resources/js/script.js"></script> 
+
 </body>
+
+
 
 </html>
 
