done with jquery
- added mobile nav;
- added animation when scrolling.

--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="vendors/css/normalize.css">
   <link rel="stylesheet" href="vendors/css/grid.css">
   <link rel="stylesheet" href="vendors/css/ionicons.min.css">
+  <link rel="stylesheet" href="vendors/css/animation.css">
   <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
   <link href="https://unpkg.com/ionicons@4.0.0/dist/css/ionicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="resources/css/style.css">
@@ -22,12 +23,13 @@
       <div class="row">
         <img src="resources/img/logo-white.png" alt="logo" class="logo">
         <img src="resources/img/logo.png" alt="logo" class="logo-black">
-        <ul class="main-nav">
+        <ul class="main-nav js--main-nav">
           <li><a href="#features">Food delivery</a></li>
           <li><a href="#work">How it works</a></li>
           <li><a href="#cities">Our cities</a></li>
           <li><a href="#sign-up">Sign up! </a></li>
         </ul>
+        <a class="mobile-nav-icon js--nav-icon"><i class="icon ion-ios-menu"></i></a>
       </div>
     </nav>
 
@@ -50,7 +52,7 @@
         let us take care of that, we’re really good at it, we promise!</p>
     </div>
 
-    <div class="row">
+    <div class="row js--wp-1">
       <div class="col span-1-of-4 box">
         <i class="ion-ios-infinite-outline icon-big"></i>
         <h3>Up to 365 days/year</h3>
@@ -149,7 +151,7 @@
 
     <div class="row">
       <div class="col span-1-of-2 step-box">
-        <img src="resources/img/app-iPhone.png" alt="Iphone app" class="app-screen">
+        <img src="resources/img/app-iPhone.png" alt="Iphone app" class="app-screen js--wp-2">
       </div>
       <div class="col span-1-of-2 step-box">
         <div class="work-step clearfix">
@@ -186,7 +188,7 @@
       <h2>We're currently in these cities</h2>
     </div>
 
-    <div class="row">
+    <div class="row js--wp-3">
       <div class="col span-1-of-4 box">
         <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
         <h3>Lisbon</h3>
@@ -316,7 +318,7 @@
 
     <div class="row">
       <div class="col span-1-of-3">
-        <div class="plan-box">
+        <div class="plan-box js--wp-4">
           <div>
             <h3>Premium</h3>
             <p class="plan-price">399$
