made some optimizations

--- a/Forfood project/index.html
+++ b/Forfood project/index.html
@@ -2,14 +2,17 @@
 <html lang="en" dir="ltr">
 
 <head>
+    <meta charset="utf-8">
   <!-- name and content say for mob devs, that they should start from scale 1.0 and not zoom out-->
-  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <!-- meta description tag - helps SEO to recognize your web in the inthernet/ max 160 chars in content-->
+  <meta name="description" content ="ominfood is a premium food delivery, with the mission to bring foor to people" >
 
   <link rel="stylesheet" href="vendors/css/normalize.css">
   <link rel="stylesheet" href="vendors/css/grid.css">
   <link rel="stylesheet" href="vendors/css/ionicons.min.css">
   <link rel="stylesheet" href="vendors/css/animation.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato|Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://unpkg.com/ionicons@4.0.0/dist/css/ionicons.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="resources/css/style.css">
   <link rel="stylesheet" href="resources/css/queries.css">
@@ -188,7 +191,6 @@
         </div>
       </div>
     </div>
-    </div>
   </section>
 
 
@@ -297,7 +299,7 @@
         <blockquote>is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver.Now
           that I got used to it, I couldn't live without my daily meals!
           <cite>
-            <img src="resources/img/customer-1.jpg"> Alberto Duncan</cite>
+            <img src="resources/img/customer-1.jpg" alt="picture of Alberto"> Alberto Duncan</cite>
         </blockquote>
       </div>
 
@@ -305,7 +307,7 @@
         <blockquote> Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver.Now
           that I got used to it, I couldn't live without my daily meals!
           <cite>
-            <img src="resources/img/customer-2.jpg">Joana Silva</cite>
+            <img src="resources/img/customer-2.jpg" alt="picture of Alberto"> Joana Silva</cite>
         </blockquote>
       </div>
 
@@ -313,7 +315,7 @@
         <blockquote> Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver.
           Now that I got used to it, I couldn't live without my daily meals!
           <cite>
-            <img src="resources/img/customer-3.jpg">Milton Chapman</cite>
+            <img src="resources/img/customer-3.jpg" alt="picture of Milton">Milton Chapman</cite>
         </blockquote>
       </div>
     </div>
@@ -427,7 +429,7 @@
       <form method="post" action="#" class="contact-form">
 
         <div class="row">
-          <div class="col span-1-of-3" id="form-name">
+          <div class="col span-1-of-3">
             <label for="name">Name</label>
           </div>
 
@@ -437,7 +439,7 @@
         </div>
 
         <div class="row">
-          <div class="col span-1-of-3 " id="form-name">
+          <div class="col span-1-of-3 ">
             <label for="email">Email</label>
           </div>
 
@@ -447,7 +449,7 @@
         </div>
 
         <div class="row">
-          <div class="col span-1-of-3" id="form-name">
+          <div class="col span-1-of-3">
             <label for="name">How did You find us?</label>
           </div>
 
@@ -462,7 +464,7 @@
         </div>
 
         <div class="row">
-          <div class="col span-1-of-3" id="form-name">
+          <div class="col span-1-of-3">
             <label for="news">Newsletter</label>
           </div>
 
@@ -472,7 +474,7 @@
         </div>
 
         <div class="row">
-          <div class="col span-1-of-3" id="form-name">
+          <div class="col span-1-of-3">
             <label>Drop us a line</label>
           </div>
 
@@ -482,7 +484,7 @@
         </div>
 
         <div class="row">
-          <div class="col span-1-of-3" id="form-name">
+          <div class="col span-1-of-3">
             <label> &nbsp;</label>
           </div>
 
@@ -555,15 +557,5 @@
   <script src="vendors/js/jquery.waypoints.min.js"></script>
   <script src="resources/js/script.js"></script> 
 
-
 </body>
-
-
-
 </html>
-
-
-<!--  
-
-
--->
